--- a/views/movies/search-movie.hbs
+++ b/views/movies/search-movie.hbs
@@ -1,7 +1,8 @@
 <form action="/search" method="POST">
-   <label> Search Movie
-      <input type="text" name="username">
-   </label>
+  <label>
+    Search Movie
+    <input type="text" name="title" id="movie-name" />
+  </label>
 
-   <button type="submit">Submit</button>
+  <button type="submit" id="movie-submit">Submit</button>
 </form>
