--- a/views/movies/search-movie.hbs
+++ b/views/movies/search-movie.hbs
@@ -1,8 +1,8 @@
-<form action="/search" method="POST">
+<form action="/search" method="GET">
   <label>
     Search Movie
-    <input type="text" name="title" id="movie-name" />
+    <input type="text" name="title" />
   </label>
 
-  <button type="submit" id="movie-submit">Submit</button>
+  <button type="submit">Submit</button>
 </form>
