--- a/views/movies/search-movie.hbs
+++ b/views/movies/search-movie.hbs
@@ -1,4 +1,4 @@
-<form action="/search" method="GET">
+<form action="/movies/movie-search" method="GET">
   <label>
     Search Movie
     <input type="text" name="title" />
