--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,13 +1,18 @@
 <h1>{{user.username}} 🚀</h1>
 <p>Welcome Ironhacker!</p>
 {{#unless user}}
-<a href="/all-movies">Search Movies</a>
-<a href="auth/login">Login</a>
-<a href="auth/signup">Signup</a>
+  <form action="/movies/movie-search" method="GET">
+    <label>
+      Search Movie
+      <input type="text" name="title" />
+    </label>
+
+    <button type="submit">Submit</button>
+  </form>
+  <a href="auth/login">Login</a>
+  <a href="auth/signup">Signup</a>
 {{/unless}}
 {{#if user}}
-<a href="/all-movies">Search Movies</a>
-<a href="auth/logout">Logout</a>
+  <a href="/all-movies">Search Movies</a>
+  <a href="auth/logout">Logout</a>
 {{/if}}
-
-
