--- a/views/movies/search-movie.hbs
+++ b/views/movies/search-movie.hbs
@@ -2,5 +2,5 @@
 {{#each movieList}}
   <img src="http://image.tmdb.org/t/p/w1280/{{poster_path}}" alt="" />
   {{title}}
-  <a href="movies/movie-detail">Detalis</a>
+  <a href="movie-detail/{{id}}">Detalis</a>
 {{/each}}
