trying put trailer

--- a/views/movies/search-movie.hbs
+++ b/views/movies/search-movie.hbs
@@ -1,6 +1,6 @@
 <h1>Movies</h1>
 {{#each movieList}}
-  <img src="http://image.tmdb.org/t/p/w1280/{{poster_path}}" alt="" />
+  <img class="movie-img" src="http://image.tmdb.org/t/p/w1280/{{poster_path}}" alt="" />
   {{title}}
   <a href="movie-detail/{{id}}">Detalis</a>
 {{/each}}
