--- a/views/movies/search-movie.hbs
+++ b/views/movies/search-movie.hbs
@@ -3,4 +3,7 @@
   <img class="movie-img" src="http://image.tmdb.org/t/p/w1280/{{poster_path}}" alt="" />
   {{title}}
   <a href="movie-detail/{{id}}">Detalis</a>
+  <form action="favourite-movies/{{id}}" method="POST">
+    <button type="submit">Add List</button>
+  </form>
 {{/each}}
