--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,8 +1,7 @@
 <h1>Profile</h1>
-<h1>Don't know what to see today???????? <a href="movies/movie-random">CLICK HERE</a></h1>
+<h1>Don't know what to see today????????
+  <a href="movies/movie-random">CLICK HERE</a></h1>
 <a href="movies/watch-list">My Watch List</a>
-<a href="movies/movies-list">List</a>
+<a href="movies/favourites">List</a>
 <a href="auth/logout">Logout</a>
 <a href="/">Back to main page</a>
-
-
