--- a/views/movies/movie-random.hbs
+++ b/views/movies/movie-random.hbs
@@ -1,2 +1,7 @@
 <h1>Movie Random</h1>
-/random generator
+{{randomMovie.original_title}}
+{{randomMovie.release_data}}
+{{randomMovie.title}}
+{{randomMovie.title}}
+{{randomMovie.title}}
+{{randomMovie.title}}
