--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,6 +1,7 @@
 <h1>Profile</h1>
+<img src="{{user.imageUrl}}" alt="user-image" />
 <h1>Don't know what to see today????????
-  <a href="movies/movie-random">CLICK HERE</a></h1>
+  <a href="movies/random-movie">CLICK HERE</a></h1>
 <a href="movies/watch-list">My Watch List</a>
 <a href="movies/favourite-movies">List</a>
 <a href="auth/logout">Logout</a>
