--- a/views/movies/movie-random.hbs
+++ b/views/movies/movie-random.hbs
@@ -8,12 +8,25 @@
   alt=""
 />
 {{randomMovie.runtime}}
+{{#if movieVideo.key}}
 <iframe
   width="560"
   height="315"
-  src="https://www.youtube.com/embed/{{movieVideo}}"
+  src="https://www.youtube.com/embed/{{movieVideo.key}}"
   title="YouTube video player"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
   allowfullscreen
 ></iframe>
+{{else}}
+<iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen
+></iframe>
+
+{{/if}}
