delete/edit profile

--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,8 +1,12 @@
 <h1>Profile</h1>
+<p>{{user.username}}</p>
 <img src="{{user.imageUrl}}" alt="user-image" />
 <h1>Don't know what to see today????????
   <a href="movies/random-movie">CLICK HERE</a></h1>
 <a href="movies/watch-list">My Watch List</a>
 <a href="movies/favourite-movies">List</a>
 <a href="auth/logout">Logout</a>
+<a href="user/{{user._id}}/edit">edit</a>
+<form action="user/{{user._id}}/delete" method="post">
+  <button type="submit">Delete Profile</button></form>
 <a href="/">Back to main page</a>
