--- a/views/movies/search-movie.hbs
+++ b/views/movies/search-movie.hbs
@@ -1,12 +1,16 @@
 <h1>Movies</h1>
 {{#each movieList}}
-  <img class="movie-img" src="http://image.tmdb.org/t/p/w1280/{{poster_path}}" alt="" />
+  <img
+    class="movie-img"
+    src="http://image.tmdb.org/t/p/w1280/{{poster_path}}"
+    alt=""
+  />
   {{title}}
   <a href="movie-detail/{{id}}">Detalis</a>
   <form action="/movies/favourite-movies/{{id}}" method="POST">
     <button type="submit">Add List</button>
   </form>
-    <form action="/movies/watch-list/{{id}}" method="POST">
+  <form action="/movies/watch-list/{{id}}" method="POST">
     <button type="submit">Add Watch List</button>
   </form>
 {{/each}}
