--- a/views/movies/search-movie.hbs
+++ b/views/movies/search-movie.hbs
@@ -1,12 +1,34 @@
-<h1>Movies</h1>
-{{#each movieList}}
-  <img class="movie-img" src="http://image.tmdb.org/t/p/w1280/{{poster_path}}" alt="" />
-  {{title}}
-  <a href="movie-detail/{{id}}">Detalis</a>
-  <form action="/movies/favourite-movies/{{id}}" method="POST">
-    <button type="submit">Add List</button>
-  </form>
-    <form action="/movies/watch-list/{{id}}" method="POST">
-    <button type="submit">Add Watch List</button>
-  </form>
-{{/each}}
+<h1><b>|</b> Movies </h1>
+<p class="sub-movie">Marven helps you select the perfect next show or movie to watch.</p>
+<div class="movies-div">
+  {{#each movieList}}
+    <div class="each-movie-div">
+      <img
+        class="movie-img"
+        src="http://image.tmdb.org/t/p/w1280/{{poster_path}}"
+        alt=""
+      />
+      <span><i class="star fa-solid fa-star"></i>{{vote_average}}</span>
+      <p class="movie-title">{{title}}</p>
+      <div class="movie-button">
+        <form action="/movies/watch-list/{{id}}" method="POST">
+          <button class="button-watch" type="submit"><i
+              class="plus-icon fa-solid fa-plus"
+            ></i>
+            Watch List</button>
+        </form>
+        <div class="movie-list-detail">
+          <button class="button-style"><a
+              href="movie-detail/{{id}}"
+            >More</a></button>
+          <form action="/movies/favourite-movies/{{id}}" method="POST">
+            <button class="button-list" type="submit"><i
+                class="heart-icon fa-solid fa-heart"
+              ></i>
+              List</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  {{/each}}
+</div>
