--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,17 +1,160 @@
+@import url("https://fonts.googleapis.com/css2?family=Aldrich&family=Babylonica&family=Bellefair&family=Dangrek&family=Montserrat:ital,wght@1,100&display=swap");
+
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
-
-a {
-  color: #00b7ff;
-}
-
-h1 {
-  color: 15px;
+  font-family: "Aldrich", sans-serif;
+  margin: 0;
+  padding: 10px;
+  background-color: black;
+  color: white;
 }
 
 .movie-img {
-  width: 100px;
-  height: 130px;
+  width: 190;
+  height: 270px;
+}
+
+.div-nav {
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+  align-self: center;
+  background-color: #242525;
+}
+
+input[type="text"] {
+  width: 70%;
+  margin: 8px 0;
+  margin-left: 2px;
+  box-sizing: border-box;
+}
+
+.search-bar {
+  margin-top: 15px;
+}
+
+.dropbtn {
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  align-self: center;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: white;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropbtn {
+  background-color: #242525;
+  color: white;
+}
+
+.movies-div {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  align-content: stretch;
+  text-align: center;
+  gap: 1rem;
+}
+
+.each-movie-div {
+  width: 190px;
+  background-color: #242525;
+}
+
+.movie-button {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 0.5rem;
+}
+
+.button-style {
+  border: none;
+  background-color: #242525;
+  color: white;
+  font-size: 15px;
+  margin-bottom: 15px;
+}
+
+.button-list {
+  border: none;
+  background-color: #242525;
+  color: white;
+  font-size: 15px;
+}
+
+.button-watch {
+  border: none;
+  background-color: #434547;
+  font-size: 15px;
+  padding: 10px 35px;
+  border-radius: 6px;
+  color: #3f6fb2;
+  font-weight: bold;
+}
+
+.plus-icon {
+  color: #3f6fb2;
+}
+
+.star {
+  color: #ecd409;
+}
+
+span {
+  background-color: #242525;
+  color: white;
+  font-size: 15px;
+  color: #A0A0A0;
+  display: flex;
+  margin-left: 5px;
+  margin-top: 5px;
+}
+
+.movie-title {
+  font-size: 20px;
+}
+
+.movie-list-detail {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.sub-movie {
+  color: #A0A0A0;
+}
+
+b {
+  color: #ecd409;
 }
