--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,12 +1,60 @@
 <html lang="en">
 
   <head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Aldrich&family=Babylonica&family=Bellefair&family=Dangrek&family=Montserrat:ital,wght@1,100&display=swap"
+      rel="stylesheet"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>{{appTitle}}</title>
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
+  {{#unless user}}
+  <div class="div-nav">
+    <div>
+      <form action="/movies/movie-search" method="GET">
+        <label>
+          Search Movie
+          <input type="text" name="title" />
+        </label>
+      </form>
+    </div>
+    <a href="auth/login">Login</a>
+    <a href="auth/signup">Signup</a>
+  </div>
+  <p>Welcome to Marven</p>
+{{/unless}}
+
+{{#if user}}
+  <div class="div-nav">
+    <h1>Marven</h1>
+    <div class="search-bar">
+      <form action="/movies/movie-search" method="GET">
+        <i class="fa-solid fa-magnifying-glass"></i>
+        <input type="text" name="title" />
+      </form>
+    </div>
+    <div class="dropdown">
+      <button class="dropbtn">{{user.username}}</button>
+      <div class="dropdown-content">
+        <a href="/profile">Profile</a>
+        <a href="auth/logout">Logout</a>
+      </div>
+    </div>
+  </div>
+  <p>Welcome to Marven, {{user.username}}</p>
+{{/if}}
 
   <body>
 
