--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -88,6 +88,7 @@ input[type="text"] {
 
 .each-movie-div {
   width: 190px;
+  height: 500px;
   background-color: #242525;
 }
 
@@ -135,7 +136,7 @@ span {
   background-color: #242525;
   color: white;
   font-size: 15px;
-  color: #A0A0A0;
+  color: #a0a0a0;
   display: flex;
   margin-left: 5px;
   margin-top: 5px;
@@ -152,9 +153,50 @@ span {
 }
 
 .sub-movie {
-  color: #A0A0A0;
+  color: #a0a0a0;
 }
 
 b {
   color: #ecd409;
+}
+
+@media (max-width: 500px) {
+  .each-movie-div {
+    width: 100px;
+    height: 270px;
+    background-color: #242525;
+  }
+  .movie-img {
+    width: 100px;
+    height: 150px;
+  }
+
+  .movie-title {
+    font-size: 10px;
+  }
+
+  .button-style {
+    border: none;
+    background-color: #242525;
+    color: white;
+    font-size: 7px;
+    margin-bottom: 7px;
+  }
+  
+  .button-list {
+    border: none;
+    background-color: #242525;
+    color: white;
+    font-size: 7px;
+  }
+  
+  .button-watch {
+    border: none;
+    background-color: #434547;
+    font-size: 7px;
+    padding: 5px 15px;
+    border-radius: 6px;
+    color: #3f6fb2;
+    font-weight: bold;
+  }
 }
