--- a/views/movies/up-coming.hbs
+++ b/views/movies/up-coming.hbs
@@ -6,6 +6,6 @@
     alt=""
   />
   {{title}}
-  <a href="movie-detail/{{id}}">Detalis</a>
+  <a href="/movies/movie-detail/{{id}}">Detalis</a>
 
 {{/each}}
