--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,4 +1,4 @@
-<form action="/auth/signup" method="POST" enctype="multipart/form-data">
+<form action="/signup" method="POST" enctype="multipart/form-data">
   <label>
     Username
     <input type="text" name="username" />
