--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -30,8 +30,8 @@
         </label>
       </form>
     </div>
-    <a href="auth/login">Login</a>
-    <a href="auth/signup">Signup</a>
+    <a href="/login">Login</a>
+    <a href="/signup">Signup</a>
   </div>
   <p>Welcome to Marven</p>
 {{/unless}}
@@ -49,7 +49,7 @@
       <button class="dropbtn">{{user.username}}</button>
       <div class="dropdown-content">
         <a href="/profile">Profile</a>
-        <a href="auth/logout">Logout</a>
+        <a href="/logout">Logout</a>
       </div>
     </div>
   </div>
