--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -21,40 +21,40 @@
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
   {{#unless user}}
-  <div class="div-nav">
-    <div>
-      <form action="/movies/movie-search" method="GET">
-        <label>
-          Search Movie
-          <input type="text" name="title" />
-        </label>
-      </form>
+    <div class="div-nav">
+      <div>
+        <form action="/movies/movie-search" method="GET">
+          <label>
+            Search Movie
+            <input type="text" name="title" />
+          </label>
+        </form>
+      </div>
+      <a href="auth/login">Login</a>
+      <a href="auth/signup">Signup</a>
     </div>
-    <a href="auth/login">Login</a>
-    <a href="auth/signup">Signup</a>
-  </div>
-  <p>Welcome to Marven</p>
-{{/unless}}
+    <p>Welcome to Marven</p>
+  {{/unless}}
 
-{{#if user}}
-  <div class="div-nav">
-    <h1>Marven</h1>
-    <div class="search-bar">
-      <form action="/movies/movie-search" method="GET">
-        <i class="fa-solid fa-magnifying-glass"></i>
-        <input type="text" name="title" />
-      </form>
-    </div>
-    <div class="dropdown">
-      <button class="dropbtn">{{user.username}}</button>
-      <div class="dropdown-content">
-        <a href="/profile">Profile</a>
-        <a href="auth/logout">Logout</a>
+  {{#if user}}
+    <div class="div-nav">
+      <h1>Marven</h1>
+      <div class="search-bar">
+        <form action="/movie-search" method="GET">
+          <i class="fa-solid fa-magnifying-glass"></i>
+          <input type="text" name="title" />
+        </form>
+      </div>
+      <div class="dropdown">
+        <button class="dropbtn">{{user.username}}</button>
+        <div class="dropdown-content">
+          <a href="/profile">Profile</a>
+          <a href="auth/logout">Logout</a>
+        </div>
       </div>
     </div>
-  </div>
-  <p>Welcome to Marven, {{user.username}}</p>
-{{/if}}
+    <p>Welcome to Marven, {{user.username}}</p>
+  {{/if}}
 
   <body>
 
