--- a/views/movies/movies-list.hbs
+++ b/views/movies/movies-list.hbs
@@ -6,7 +6,7 @@
     alt=""
   />
   <h1>{{title}}</h1>
-  <form action="/movies/favourite-movies/{{id}}/delete" method="POST">
+  <form action="/favourite-movies/{{id}}/delete" method="POST">
     <button type="submit">DELETE MOVIE</button>
   </form>
 {{/each}}
