--- a/views/movies/movie-detail.hbs
+++ b/views/movies/movie-detail.hbs
@@ -20,6 +20,6 @@
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
   allowfullscreen
 ></iframe>
-<form action="/movies/favourite-movies/{{movieDetail.id}}" method="POST">
+<form action="/favourite-movies/{{movieDetail.id}}" method="POST">
     <button type="submit">Add List</button>
   </form>
