--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -2,9 +2,9 @@
 <p>{{user.username}}</p>
 <img src="{{user.imageUrl}}" alt="user-image" />
 <h1>Don't know what to see today????????
-  <a href="/movies/random-movie">CLICK HERE</a></h1>
-<a href="/movies/watch-list">My Watch List</a>
-<a href="/movies/favourite-movies">List</a>
+  <a href="/random-movie">CLICK HERE</a></h1>
+<a href="/watch-list">My Watch List</a>
+<a href="/favourite-movies">List</a>
 <a href="/auth/logout">Logout</a>
 <a href="/user/{{user._id}}/edit">edit</a>
 <form action="/user/{{user._id}}/delete" method="post">
