--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -30,8 +30,8 @@
           </label>
         </form>
       </div>
-      <a href="auth/login">Login</a>
-      <a href="auth/signup">Signup</a>
+      <a href="/login">Login</a>
+      <a href="/signup">Signup</a>
     </div>
     <a href="/login">Login</a>
     <a href="/signup">Signup</a>
