--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -33,7 +33,7 @@ input[type="text"] {
   width: 70%;
   margin: 8px 0;
   box-sizing: border-box;
-  background-color:#434547;
+  background-color: #434547;
 }
 
 .search-bar {
@@ -146,15 +146,21 @@ span {
 }
 
 .movie-title {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box !important;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  white-space: normal;
   font-size: 20px;
-  text-align: start;
+  text-align: left;
 }
 
-/* .movie-list-detail {
+.movie-list-detail {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-} */
+}
 
 .sub-movie {
   color: #a0a0a0;
@@ -162,6 +168,11 @@ span {
 
 b {
   color: #ecd409;
+}
+
+.movie-title-div {
+  width: 190px;
+  height: 70px;
 }
 
 @media (max-width: 500px) {
@@ -206,5 +217,10 @@ b {
 
   span {
     font-size: 7px;
+  }
+
+  .movie-title-div {
+    width: 100px;
+    height: 30px;
   }
 }
