--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -19,27 +19,37 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>{{appTitle}}</title>
     <link rel="stylesheet" href="/stylesheets/style.css" />
+    <link rel="stylesheet" href="/stylesheets/width500.css">
   </head>
-  {{#unless user}}
+  
+
+  <body>
+   
     <div class="div-nav">
-      <div>
         <form action="/movies/movie-search" method="GET">
-          <label>
-            Search Movie
+           <i class="fa-solid fa-magnifying-glass"></i>
             <input type="text" name="title" />
-          </label>
-        </form>
+        </form>    
+      {{#if user}}
+      <div>
+      <div class="dropdown">
+      <button class="dropbtn">{{user.username}}</button>
+      <div class="dropdown-content">
+        <a href="/profile">Profile</a>
+        <a href="/logout">Logout</a>
       </div>
+      </div>
+    <p>Welcome to Marven, {{user.username}}</p></div>
+    {{else}}
+    
+      
       <a href="/login">Login</a>
       <a href="/signup">Signup</a>
-    </div>
-    <a href="/login">Login</a>
-    <a href="/signup">Signup</a>
   </div>
-  <p>Welcome to Marven</p>
-{{/unless}}
+  {{/if}}
 
-{{#if user}}
+
+{{!-- {{#if user}}
   <div class="div-nav">
     <h1>Marven</h1>
     <div class="search-bar">
@@ -56,11 +66,10 @@
       </div>
     </div>
     <p>Welcome to Marven, {{user.username}}</p>
-  {{/if}}
+  {{/if}} --}}
+  <main>
 
-  <body>
-
-    {{{body}}}
+    {{{body}}}</main>
 
     <script src="/js/script.js"></script>
   </body>
