--- a/views/movies/movie-detail.hbs
+++ b/views/movies/movie-detail.hbs
@@ -1,3 +1,4 @@
+<h1><b>|</b> Movie Detail </h1>
 <h1>{{movieDetail.original_title}}</h1>
 <p>{{movieDetail.release_date}}, Run time: {{movieDetail.runtime}}</p>
 <div class="movie-detail-div">
