--- a/views/movies/movie-random.hbs
+++ b/views/movies/movie-random.hbs
@@ -1,4 +1,4 @@
-<h1>Movie Random</h1>
+<h1><b>|</b> Random </h1>
 {{randomMovie.original_title}}
 {{randomMovie.release_data}}
 {{randomMovie.overview}}
