--- a/views/movies/up-coming.hbs
+++ b/views/movies/up-coming.hbs
@@ -1,11 +1,35 @@
-<h1>Up coming</h1>
-{{#each upComing}}
-  <img
-    class="movie-img"
-    src="http://image.tmdb.org/t/p/w1280/{{poster_path}}"
-    alt=""
-  />
-  {{title}}
-  <a href="/movie-detail/{{id}}">Detalis</a>
-
-{{/each}}
+<h1><b>|</b> Up Coming </h1>
+<div class="movies-div">
+  {{#each upComing}}
+    <div class="each-movie-div">
+      <img
+        class="movie-img"
+        src="http://image.tmdb.org/t/p/w1280/{{poster_path}}"
+        alt=""
+      />
+      <span><i class="star fa-solid fa-star"></i>{{vote_average}}</span>
+      <div class="movie-title-div">
+        <p class="movie-title">{{title}}</p>
+      </div>
+      <div class="movie-button">
+        <form action="/movies/watch-list/{{id}}" method="POST">
+          <button class="button-watch" type="submit"><i
+              class="plus-icon fa-solid fa-plus"
+            ></i>
+            Watch List</button>
+        </form>
+        </div>
+        <div class="movie-list-detail">
+          <button class="button-style"><a
+              href="movie-detail/{{id}}"
+            >More</a></button>
+          <form action="favourite-movies/{{id}}" method="POST">
+            <button class="button-list" type="submit"><i
+                class="heart-icon fa-solid fa-heart"
+              ></i>
+              List</button>
+          </form>
+        </div>
+    </div>
+  {{/each}}
+</div>
