--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,42 +14,46 @@
       href="https://fonts.googleapis.com/css2?family=Aldrich&family=Babylonica&family=Bellefair&family=Dangrek&family=Montserrat:ital,wght@1,100&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Aldrich&family=Babylonica&family=Bellefair&family=Dangrek&family=Montserrat:ital,wght@1,100&display=swap"
+      rel="stylesheet"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>{{appTitle}}</title>
     <link rel="stylesheet" href="/stylesheets/style.css" />
-    <link rel="stylesheet" href="/stylesheets/width500.css">
+    <link rel="stylesheet" href="/stylesheets/width500.css" />
+    <link rel="stylesheet" href="/stylesheets/nav.css" />
   </head>
-  
 
   <body>
-   
     <div class="div-nav">
-        <form action="/movies/movie-search" method="GET">
-           <i class="fa-solid fa-magnifying-glass"></i>
-            <input type="text" name="title" />
-        </form>    
+      <h1 class="marven">Marven</h1>
+      <i class="lupa fa-solid fa-magnifying-glass"></i>
+      <form action="/movies/movie-search" method="GET">
+        <input type="text" name="title" />
+      </form>
       {{#if user}}
-      <div>
-      <div class="dropdown">
-      <button class="dropbtn">{{user.username}}</button>
-      <div class="dropdown-content">
-        <a href="/profile">Profile</a>
-        <a href="/logout">Logout</a>
-      </div>
-      </div>
-    <p>Welcome to Marven, {{user.username}}</p></div>
-    {{else}}
-    
-      
-      <a href="/login">Login</a>
-      <a href="/signup">Signup</a>
-  </div>
-  {{/if}}
+        <div class="user-div">
+          <div class="dropdown">
+            <button class="dropbtn">{{user.username}}</button>
+            <div class="dropdown-content">
+              <a class="dropdown-user" href="/profile">Profile</a>
+              <a class="dropdown-user" href="/logout">Logout</a>
+            </div>
+          </div>
+        </div>
+      {{else}}
 
+        <a href="/login">Login</a>
+        <a href="/signup">Signup</a>
+      {{/if}}
+    </div>
 
-{{!-- {{#if user}}
+    {{!-- {{#if user}}
   <div class="div-nav">
     <h1>Marven</h1>
     <div class="search-bar">
@@ -67,9 +71,9 @@
     </div>
     <p>Welcome to Marven, {{user.username}}</p>
   {{/if}} --}}
-  <main>
+    <main>
 
-    {{{body}}}</main>
+      {{{body}}}</main>
 
     <script src="/js/script.js"></script>
   </body>
