--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,12 +1,13 @@
 <div class="profile-div">
-  <div class="img-profile.div">
-    <p>Hello, {{user.username}}</p>
-    <img src="{{user.imageUrl}}" alt="user-image" />
+  <div class="img-profile-div">
+    <h1 class="hello-profile">Hello, {{user.username}}</h1>
+    <img class="profile-img" src="{{user.imageUrl}}" alt="user-image" />
   </div>
   <div class="profile-links">
     <p><a href="movies/random-movie">Random Movie</a></p>
     <p><a href="movies/watch-list">My Watch List</a></p>
     <p><a href="movies/favourite-movies">List</a></p>
+    <p><a href="movies/up-coming">Up coming</a></p>
     <p><a href="/auth/logout">Logout</a></p>
     <p><a href="/{{user._id}}/edit">Edit Profile</a></p>
     <p><a href="/">Back to main page</a></p>
