--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -27,6 +27,8 @@
     <link rel="stylesheet" href="/stylesheets/style.css" />
     <link rel="stylesheet" href="/stylesheets/width500.css" />
     <link rel="stylesheet" href="/stylesheets/nav.css" />
+    <link rel="stylesheet" href="/stylesheets/login.css" />
+    <link rel="stylesheet" href="/stylesheets/signup.css">
   </head>
 
   <body>
@@ -72,6 +74,7 @@
     <p>Welcome to Marven, {{user.username}}</p>
   {{/if}} --}}
     <main>
+      {{!-- <img src="/images/logo.jpg" alt=""> --}}
 
       {{{body}}}</main>
 
