--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,15 +1,21 @@
-<form action="/signup" method="POST" enctype="multipart/form-data">
-  <label>
-    Username
-    <input type="text" name="username" />
-  </label>
-  <label>
-    Password
-    <input type="password" name="password" />
-  </label>
-  <input type="file" name="user-image" />
-  <button type="submit">Submit</button>
-</form>
+{{!-- <h1 class="welcome-signup">Welcome to Marven</h1> --}}
+<div class="login">
+  <form class="login-form" action="/signup" method="POST" enctype="multipart/form-data">
+    <label>
+      <i class="fa-solid fa-user"></i>
+      <input type="text" name="username" placeholder="Username"/>
+    </label>
+    <label>
+      <i class="fa-solid fa-lock"></i>
+      <input class="password-label" type="password" name="password" placeholder="Password" />
+    </label>
+    <label class="file-upload">
+      <input class="password-label" type="file" name="user-image" />
+      Upload File
+    </label>
+    <button  class="login-button" type="submit">Submit</button>
+  </form>
+</div>
 
 {{#if errorMessage}}
   {{errorMessage}}
